# MONK-library

./: .envrc  .guix-channel  CMakeLists.txt  manifest.scm  setup.py
bindings/: CMakeLists.txt  pybind.cpp
cmake/: MonkConfig.cmake.in
core/: ByteVector.cpp  ByteVector.h  CMakeLists.txt  MFERData.cpp  MFERData.h  NihonKohdenData.cpp
core/tests/: CMakeLists.txt
guix-channel/monk/: packages.scm
tools/: CMakeLists.txt  corpus_test.cpp  mfer2csv.cpp  mferanon.cpp  mferdump.cpp  mferinfo.cpp
